fix files 'jumping' nodes on refresh

--- a/ui/apps/io.ox/files/style.less
+++ b/ui/apps/io.ox/files/style.less
@@ -72,9 +72,10 @@
         .box-sizing(border-box);
 
         .inline-actions {
+            min-height: 30px;
+            float: left;
             //space for inline-actions-right
             margin: 0 125px 20px 0;
-            float: left;
 
             .io-ox-inline-links {
                 margin: 0 0 0 0;
